--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pyserial = "^3.5"
 cobs = "^1.2.1"
 protobuf = "^5.26.1"
 
+[tool.poetry.group.dev.dependencies]
+grpcio-tools = "^1.63.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
