--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           poetry install 
           cd ./src/proto
-          protoc --python_out=./ --pyi_out=./ -I. config.proto
+          poetry run python -m grpc_tools.protoc --python_out=./ --pyi_out=./ -I. config.proto
 
       - name: Publish package
         run: poetry publish
