--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [{include = "src/haybox"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8"
 pyserial = "^3.5"
 cobs = "^1.2.1"
 protobuf = "^5.26.1"
