--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "HayBox firmware config protocol Python library"
 authors = ["Jonathan Haylett <jonathan@haylett.dev>"]
 license = "GPL-3.0-only"
 readme = "README.md"
-packages = [{include = "src/haybox"}]
+packages = [{include = "haybox", from = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
