--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,6 @@
 name: Build and publish
 
-on:
-  release:
-    types: [published]
+on: [push]
 
 jobs:
   metadata:
@@ -33,7 +31,7 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          sudo apt install protobuf-compiler pipx
+          sudo apt install pipx
           pipx install poetry
 
       - name: Check out this repo
@@ -59,5 +57,6 @@ jobs:
 
       - name: Build and publish package
         run: poetry publish --build
+        if: github.ref_type == 'tag'
         env:
           POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
