chore: try to use short digest

--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
       "customType": "regex",
       "fileMatch": ["^meta.yaml$"],
       "matchStrings": [
-        "revision:\\s+(?<currentDigest>[^\\s]+)"
+        "revision:\\s+(?<currentDigestShort>[^\\s]+)"
       ],
       "currentValueTemplate": "main",
       "depNameTemplate": "HayBox-proto",
