ci: attempt to fix auto version bumping

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -1,17 +1,17 @@
 on: [push]
 
 jobs:
-  build:
+  bump_version:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out this repo
         uses: actions/checkout@v4
 
-      - name: Automated Version Bump
-        uses: phips28/gh-action-bump-version@v11.0.7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PACKAGE_FILENAME: "pyproject.toml"
+      - name: Conventional Changelog Action
+        uses: TriPSs/conventional-changelog-action@v6.0.0
         with:
+          version-file: pyproject.toml
+          version-path: tool.poetry.version
           skip-tag: true
+          output-file: false
