--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v6.0.0
         with:
+          github-token: ${{ secrets.github_token }}
           version-file: pyproject.toml
           version-path: tool.poetry.version
           skip-tag: true
