--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -4,6 +4,8 @@ on: [push]
 jobs:
   bump_version:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Check out this repo
@@ -16,5 +18,6 @@ jobs:
           version-file: pyproject.toml
           version-path: tool.poetry.version
           skip-tag: true
+          skip-ci: true
           skip-on-empty: false
           output-file: false
